--- a/markup/_scss/base/_typography.scss
+++ b/markup/_scss/base/_typography.scss
@@ -51,7 +51,7 @@ ul{
 .nl-section{
   h1{
     @include fontSize(28px);
-    //margin-bottom: calculateRem(10px);
+    margin-bottom: 1rem;
   }
 }
 
