--- a/markup/_scss/sections/_nl-section.scss
+++ b/markup/_scss/sections/_nl-section.scss
@@ -1,6 +1,7 @@
 
 .nl-section {
-  padding: calculateRem(80px) 6.25rem;
+  //padding: calculateRem(80px) 6.25rem;
+  padding: 2.5rem 3.25rem;
   @include respond-to(medium-display){
     padding: calculateRem(80px) 0;
   }
