--- a/markup/_layouts/_content/create-team-content.jade
+++ b/markup/_layouts/_content/create-team-content.jade
@@ -1,4 +1,4 @@
-section.nl-section.nl-players.nl-create-team
+section.nl-section.nl-players.nl-create-team.soccer
     div.container.container-wider
         div.row
             div.col-md-12
