--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10292,6 +10292,10 @@ button:focus {
   padding-left: 10px;
   margin-right: -10px; }
 
+#top5-player-content .nav-item,
+#top5-manager-content .nav-item {
+  width: 19.5%; }
+
 .subtitle {
   text-align: left; }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -10390,9 +10394,6 @@ button:focus {
   background: linear-gradient(to bottom, #e89608 0%, #e37606 100%); }
   .modal-menu a {
     text-shadow: none; }
-
-.nav-item {
-  width: 19.5%; }
 
 .mobile-menu {
   width: 49.5%;
@@ -11064,247 +11065,6 @@ td:nth-child(4).homepage-list-view {
   .upcoming-contests h5 {
     padding-left: 15px;
     padding-top: 30px; } }
-
-.nl-create-team {
-  padding-left: 1.875rem;
-  padding-right: 1.875rem;
-  padding-bottom: 3.125rem;
-  padding-top: 2.5rem; }
-  @media (max-width: 991px) {
-    .nl-create-team {
-      padding-left: 0;
-      padding-right: 0; } }
-
-.nl-create-team-table .nl-players-search {
-  min-width: 12.5rem; }
-
-.nl-create-team-table td, .nl-create-team-table th {
-  padding: 0.5rem; }
-
-.nl-create-team-table td:not(:first-child), .nl-create-team-table .table th:not(:first-child) {
-  text-align: left; }
-
-@media (min-width: 992px) {
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(1),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(1) {
-    width: 10%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(2),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(2) {
-    width: 27%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(3),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(3) {
-    width: 10%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(4),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(4) {
-    width: 6%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(5),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(5) {
-    width: 8%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(6),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(6) {
-    width: 8%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(7),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(7) {
-    width: 8%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(8),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(8) {
-    width: 7%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(9),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(9) {
-    width: 10%; }
-  .nl-create-team-table .nl-desc-table tbody tr td:nth-child(10),
-  .nl-create-team-table .nl-desc-table thead tr th:nth-child(10) {
-    width: 6%; } }
-
-.nl-team-info {
-  background: #142d57;
-  color: #fff;
-  font-size: 15px;
-  font-size: 0.9375rem;
-  text-transform: uppercase;
-  font-weight: 600;
-  overflow: hidden;
-  border-radius: 0.625rem;
-  max-width: 310px;
-  margin-left: auto;
-  margin-right: auto; }
-  .nl-team-info .nl-team-name {
-    width: 100%;
-    background: #121a31;
-    color: #e48706;
-    font-size: 21px;
-    font-size: 1.3125rem;
-    font-weight: 700;
-    text-align: center;
-    padding: 1.25rem; }
-  .nl-team-info .nl-team-data {
-    padding: 1.25rem; }
-    .nl-team-info .nl-team-data span {
-      font-weight: 500; }
-      .nl-team-info .nl-team-data span.avalibe {
-        color: #e48706; }
-
-.nl-team-button {
-  text-align: center;
-  margin: 1.25rem 0; }
-  .nl-team-button .btn-team {
-    margin: 0.3125rem; }
-    @media (max-width: 991px) {
-      .nl-team-button .btn-team {
-        display: none; } }
-
-.nl-team-field {
-  /*background: url(../img/nl-soccer-field.png) no-repeat 0 0;*/
-  background-size: contain;
-  min-width: 620px;
-  min-height: 563px; }
-  .nl-team-field.football-updated {
-    background: url(../img/football/nl-football-field-updated.png) no-repeat;
-    background-size: contain;
-    min-height: 380px;
-    background-position: 50% 50%; }
-    .nl-team-field.football-updated .nl-player-block img {
-      max-width: 77px; }
-  @media (max-width: 991px) {
-    .nl-team-field {
-      display: none; } }
-  .nl-team-field .goalkeeper-line {
-    position: relative; }
-  .nl-team-field .nl-player-block {
-    position: absolute;
-    max-width: 105px;
-    text-align: center;
-    font-size: 10px;
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: 600; }
-    .nl-team-field .nl-player-block p {
-      margin: 0;
-      line-height: 15px; }
-    .nl-team-field .nl-player-block img {
-      max-width: 60px; }
-    .nl-team-field .nl-player-block--data {
-      background: #253046;
-      position: relative;
-      min-width: 95px;
-      padding: 2px; }
-      .nl-team-field .nl-player-block--data .btn-player-close {
-        position: absolute;
-        top: -16px;
-        right: -10px;
-        background: red;
-        color: #fff; }
-      .nl-team-field .nl-player-block--data .data {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-        justify-content: space-between; }
-        .nl-team-field .nl-player-block--data .data span:first-child {
-          color: #df920b; }
-
-.player-main-block {
-  width: 100%;
-  height: 100%;
-  min-height: 563px;
-  position: relative; }
-  .player-main-block .nl-G-position {
-    bottom: 13.5%;
-    left: 43%; }
-  .player-main-block .nl-DL-position {
-    bottom: 28.5%;
-    left: 24%; }
-  .player-main-block .nl-DR-position {
-    bottom: 28.5%;
-    right: 24%; }
-  .player-main-block .nl-DAL-position {
-    bottom: 35%;
-    left: 7%; }
-  .player-main-block .nl-DAR-position {
-    bottom: 35%;
-    right: 6%; }
-  .player-main-block .nl-CM-position {
-    bottom: 42%;
-    left: 43%; }
-  .player-main-block .nl-ST-position {
-    top: 2.5%;
-    left: 43%; }
-  .player-main-block .nl-LS-position {
-    top: 2.5%;
-    left: 17%; }
-  .player-main-block .nl-RS-position {
-    top: 2.5%;
-    right: 17%; }
-  .player-main-block .nl-LWM-position {
-    top: 25%;
-    left: 25%; }
-  .player-main-block .nl-RWM-position {
-    top: 25%;
-    right: 25%; }
-  .player-main-block.football {
-    min-height: 420px;
-    margin-top: 80px;
-    margin-bottom: 30px; }
-    .player-main-block.football .nl-FLEX-position {
-      bottom: 12.8%;
-      right: 10%; }
-      .player-main-block.football .nl-FLEX-position img {
-        max-width: 95px; }
-    .player-main-block.football .nl-K-position {
-      bottom: 25%;
-      left: 43%; }
-    .player-main-block.football .nl-LRB-position {
-      bottom: 46%;
-      left: 28.5%; }
-    .player-main-block.football .nl-RRB-position {
-      bottom: 46%;
-      right: 25.5%; }
-    .player-main-block.football .nl-QB-position {
-      top: 15%;
-      left: 43%; }
-    .player-main-block.football .nl-LWR-position {
-      top: -1%;
-      left: 18%; }
-    .player-main-block.football .nl-RWR-position {
-      top: 2%;
-      right: 18%; }
-    .player-main-block.football .nl-TE-position {
-      top: -15%;
-      right: 34%; }
-      .player-main-block.football .nl-TE-position img {
-        max-width: 95px; }
-    .player-main-block.football .nl-team-logo-position {
-      bottom: 13.8%;
-      left: 13%; }
-      .player-main-block.football .nl-team-logo-position img {
-        max-width: inherit; }
-
-.nl-team-list {
-  max-width: 31.25rem;
-  margin: 0 auto;
-  padding: 0; }
-
-/*.btn-primary:active,
-.btn-primary.active,
-.show > .btn-primary.dropdown-toggle {
-    color: #fff;
-    background-color: #fb8700;
-    background-image: none;
-    border-color: #f18200;
-}*/
-.dropdown .btn-primary {
-  color: #fb8700;
-  background-color: #ffffff;
-  background-image: none;
-  border-color: #e1e2e4;
-  width: 80%;
-  text-align: left;
-  margin: 0 auto;
-  display: block; }
-
-.dropdown .dropdown-menu {
-  width: 100%; }
 
 .nl-section {
   padding: 2.5rem 3.25rem; }
