--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -184,7 +184,7 @@ section.nl-section.nl-players.nl-contests
                         div.tab-pane(id="d" role="tabpanel") TAB3
 
 
-            div.col-lg-4
+            div.col-md-8.offset-md-2.offset-lg-0.col-lg-4
                 div.nl-contest-info-title
                     h3 Contest info
                 div.nl-contest-info-table
@@ -201,11 +201,11 @@ section.nl-section.nl-players.nl-contests
                                         p 7/100
 
                             tr
-                                td
+                                td.bottom
                                     div        
                                         p.tit buy in:
                                         p 10nlc2
-                                td
+                                td.bottom
                                     div
                                         p.tit allowed teams:
                                         p 2
