--- a/markup/_layouts/_content/football_enter_contests_content.jade
+++ b/markup/_layouts/_content/football_enter_contests_content.jade
@@ -1,19 +1,19 @@
 section.nl-section.nl-players.nl-enter-contests
-	div.container.container-narrow
+	div.container-fluid
 		div.row
-			div.col-md-12.col-lg-6
+			div.col-md-6.col-lg-6.col-xl-5
 				div.heading-search
 					h1.heading-search__header Enter contest
 					div.row
-						div.col-md-4.col-lg-3
-						div.heading-search__search.col-md-4.col-lg-6
+						div.col-sm-3.col-md-2.col-lg-3
+						div.heading-search__search.col-sm-6.col-md-8.col-lg-6
 							div.dropdown
 								button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select your team
 								div.dropdown-menu(aria-labelledby="dropdownMenuButton")
 									a.dropdown-item Team A
 									a.dropdown-item Team B
 									a.dropdown-item Team C
-						div.col-md-4.col-lg-3
+						div.col-md-2.col-lg-3
 
 				div.nl-team-info
 					div.nl-team-name your team
@@ -38,9 +38,6 @@ section.nl-section.nl-players.nl-enter-contests
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
 				div.nl-team-field.football
-					div.striker-line
-					div.midfielder-line
-					div.defender-line
 					div.player-main-block.football
 						div.nl-player-block.nl-FLEX-position(data-position="FLEX")
 							img(src="assets/img/football/FLEX.png" alt="FLEX")
@@ -158,8 +155,8 @@ section.nl-section.nl-players.nl-enter-contests
 											td Player name
 											td.pos TE
 											td 30
-											td $0
-			div.col-md-12.col-lg-6
+											td $0							
+			div.col-md-6.col-lg-5.offset-lg-1.col-xl-5.offset-xl-2
 				div.nl-contest-info-title
 					h1.heading-search__header Contest information
 				div.nl-contest-info-table
@@ -246,8 +243,39 @@ section.nl-section.nl-players.nl-enter-contests
 									td Username
 									td MyTeamName
 									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
 					table.table.table-info3
 						thead
 							tr
 								th 
 									button.btn.btn-primary Payout
+
