--- a/markup/_layouts/_content/enter_contests_content.jade
+++ b/markup/_layouts/_content/enter_contests_content.jade
@@ -1,19 +1,19 @@
 section.nl-section.nl-players.nl-enter-contests.soccer
-	div.container.container-narrow
+	div.container-fluid
 		div.row
-			div.col-md-12.col-lg-6
+			div.col-md-6.col-lg-6
 				div.heading-search
 					h1.heading-search__header Enter contest
 					div.row
-						div.col-md-4.col-lg-3
-						div.heading-search__search.col-md-4.col-lg-6
+						div.col-sm-3.col-md-2.col-lg-3
+						div.heading-search__search.col-sm-6.col-md-8.col-lg-6
 							div.dropdown
 								button#dropdownMenuButton.btn.btn-secondary.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Select your team
 								div.dropdown-menu(aria-labelledby="dropdownMenuButton")
 									a.dropdown-item Team A
 									a.dropdown-item Team B
 									a.dropdown-item Team C
-						div.col-md-4.col-lg-3
+						div.col-md-2.col-lg-3
 
 				div.nl-team-info
 					div.nl-team-name your team
@@ -38,9 +38,6 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 					button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
 					button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
 				div.nl-team-field.soccer
-					div.striker-line
-					div.midfielder-line
-					div.defender-line
 					div.player-main-block
 						div.nl-player-block.nl-G-position(data-position="G")
 							img(src="assets/img/img-goalkeeper.png" alt="goalkeeper")
@@ -182,7 +179,7 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 											td.pos ST
 											td 30
 											td $0
-			div.col-md-12.col-lg-6
+			div.col-md-6.col-lg-5.offset-lg-1
 				div.nl-contest-info-title
 					h1.heading-search__header Contest information
 				div.nl-contest-info-table
@@ -239,6 +236,36 @@ section.nl-section.nl-players.nl-enter-contests.soccer
 					div.nl-table-scroll2
 						table.table.table-striped.table-info4
 							tbody
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
+								tr
+									td 1
+									td Username
+									td MyTeamName
+									td 37.90
 								tr
 									td 1
 									td Username
